feat: List all badge and player's badge

--- a/src/main/resources/badges.yml
+++ b/src/main/resources/badges.yml
@@ -1,7 +1,7 @@
 badges:
   smile:
     displayName: "Smile Face"
-    icon: "😊️"
+    icon: "😊"
   heart:
     displayName: "Heart"
-    icon: "️❤"
+    icon: "❤"
